crates/plotnik-tests/tests/02-parser/recovery_validation/comma_in_alternation.txt
Q = [(a), (b), (c)]
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:9
  |
1 | Q = [(a), (b), (c)]
  |         ^
  |
help: remove the `,`
  |
1 - Q = [(a), (b), (c)]
1 + Q = [(a) (b), (c)]
  |

error: patterns are separated by whitespace
 --> query.ptk:1:14
  |
1 | Q = [(a), (b), (c)]
  |              ^
  |
help: remove the `,`
  |
1 - Q = [(a), (b), (c)]
1 + Q = [(a), (b) (c)]
  |
